Remove GroupByHashMode
Now that GroupByHashMode.PRECOMPUTED is removed, the remaining hash
modes can be expressed as a simple boolean instead of a two-valued enum
type.

(cherry picked from commit 5fc30e57cb050206f76ce75054459feecc615c5e)
(cherry picked from commit 06a9bfd5a58e82220ae5c92ec5d2116fc8305327)